--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "author": "Moises Sanabria",
   "license": "ISC",
   "dependencies": {
-    "npm": "^6.8.0",
+    "npm": "^6.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
