--- a/package.json
+++ b/package.json
@@ -4,26 +4,40 @@
   "description": "poetry ui powered by natural language processing and react.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV='production' webpack"
   },
   "babel": {
     "presets": [
       "@babel/preset-env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/syntax-dynamic-import"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moisestech/rap-nlp.git"
   },
   "keywords": [],
   "author": "Moises Sanabria",
   "license": "ISC",
   "dependencies": {
+    "copy-webpack-plugin": "^6.0.3",
     "npm": "^6.14.7",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
